fixed the admin layout issue

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGO_URI=mongodb://localhost:27017/product-catalog
+MONGO_URI=mongodb+srv://The_Archive_Admin_DB:hH8CZbYxYszMR93G@thearchive.eodczdc.mongodb.net/thearchive?appName=TheArchive
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
